--- a/prestations.html
+++ b/prestations.html
@@ -121,12 +121,12 @@
 					<footer id="footer">
 						<section>
 							<h2>A propos</h2>
-							<p>Je suis assistante freelance à Lauris. J'interviens dans vos bureaux aux alentours d'Aix-en-Provence et de Salon-de-Provence ou en télétravail.</p>
+							<p>Je suis assistante freelance à Lauris. J'interviens dans vos bureaux aux alentours d'Aix-en-Provence, de Salon-de-Provence, de Cavaillon ou en télétravail.</p>
 						</section>
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Telephone</dt>
+								<dt>Téléphone</dt>
 								<dd>+33 6 52 60 96 49</dd>
 								<dt>Email</dt>
 								<dd><a href="#">laboitazerty@gmail.com</a></dd>
