--- a/prestations.html
+++ b/prestations.html
@@ -66,6 +66,14 @@
 								</div></p>
 								<p>Recherches juridiques</p>
 								<p>Secrétariat expert judiciaire</p>
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<ul>
+											<li>Convocation à expertise</li>
+											<li>Rédaction et mise en page de notes aux parties</li>
+											<li>Respect du contradictoire</li>
+										</ul>									
+								</div></p>
 								<h2>Entreprises</h2>
 								<p>Secrétariat classique :
 								<div class="row">
