--- a/prestations.html
+++ b/prestations.html
@@ -64,6 +64,7 @@
 										</ul>
 									</div>
 								</div></p>
+								<p>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</p>
 								<p>Recherches juridiques</p>
 								<p>Secrétariat expert judiciaire</p>
 								<div class="row">
@@ -87,26 +88,11 @@
 									<div class="col-6 col-12-medium">
 										<ul>
 											<li>Saisie de devis, de factures</li>
-											<li>PSuivi et relance des impayés</li>
+											<li>Suivi et relance des impayés</li>
 											<li>Rapprochement bancaire</li>
 										</ul>
 									</div>
 								</div></p>
-								<p>Permanence téléphonique :
-								<div class="row">
-									<div class="col-6 col-12-medium">
-										<ul>
-											<li>Ggestion de votre standard téléphonique par transfert d'appel</li>
-										</ul>
-									</div>
-									<div class="col-6 col-12-medium">
-										<ul>
-											<li>Synthèse des appels, messages et rendez-vous par mail en temps réel</li>
-										</ul>
-									</div>
-								</div></p>
-								<p>Suivi des contentieux que vous pouvez avoir avec un fournisseur, un salarié, un client, l'administration...</p>
-								<p>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</p>
 							<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>	
 							</section>
 
