--- a/prestations.html
+++ b/prestations.html
@@ -54,6 +54,7 @@
 											<li>Frappe de vos courriers</li>
 											<li>Communication de pièces</li>
 											<li>RPVA</li>
+											<li>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-medium">
