--- a/prestations.html
+++ b/prestations.html
@@ -62,11 +62,10 @@
 											<li>Note d'honoraires, relance</li>
 											<li>Préparation de dossiers de plaidoirie</li>
 											<li>Saisie d'actes : assignation, conclusions, rapport d'expertise, constat d'huissier</li>
+											<li>Recherches juridiques</li>
 										</ul>
 									</div>
 								</div></p>
-								<p>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</p>
-								<p>Recherches juridiques</p>
 								<p>Secrétariat expert judiciaire</p>
 								<div class="row">
 									<div class="col-6 col-12-medium">
