--- a/prestations.html
+++ b/prestations.html
@@ -76,7 +76,7 @@
 										</ul>									
 								</div></p>
 								<h2>Entreprises</h2>
-								<p>Secrétariat classique :
+								<p>Secrétariat classique :</p>
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
