--- a/prestations.html
+++ b/prestations.html
@@ -73,7 +73,8 @@
 											<li>Convocation à expertise</li>
 											<li>Rédaction et mise en page de notes aux parties</li>
 											<li>Respect du contradictoire</li>
-										</ul>									
+										</ul>		
+									</div>
 								</div></p>
 								<h2>Entreprises</h2>
 								<p>Secrétariat classique :</p>
