--- a/prestations.html
+++ b/prestations.html
@@ -66,7 +66,7 @@
 										</ul>
 									</div>
 								</div></p>
-								<p>Secrétariat expert judiciaire</p>
+								<p>Secrétariat expert judiciaire
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
@@ -77,7 +77,7 @@
 									</div>
 								</div></p>
 								<h2>Entreprises</h2>
-								<p>Secrétariat classique :</p>
+								<p>Secrétariat classique :
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
