--- a/prestations.html
+++ b/prestations.html
@@ -66,7 +66,7 @@
 										</ul>
 									</div>
 								</div></p>
-								<p>Secrétariat expert judiciaire
+								<p>Secrétariat expert judiciaire :
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
