--- a/prestations.html
+++ b/prestations.html
@@ -43,7 +43,7 @@
 									<div class="col-6 col-12-medium">
 										<ul>
 											<li>Rédaction de courriers divers</li>
-											<li>classement, archivage</li>
+											<li>Classement, archivage</li>
 										</ul>
 									</div>
 								</div></p>
