--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<p>Les modalités d’exécution de la mission :</p>
 									<p>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</p>
 									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec un délai pour ce faire. Je réalise ce travail et vous l’adresse pour validation.</p>
-									<p>Je peux travailler sur vos logiciels métiers, vos drives. La confiance et la confidentialité sont les maîtres mots.</p>									
+									<p>Je peux travailler sur vos logiciels métiers, vos drives. <strong>La confiance et la confidentialité sont les maîtres mots.</strong></p>									
 									<p>Le télétravail permet de réaliser des économies : pas de bureau dédié, j'utilise mon matériel et vous ne payez que le travail réalisé.</p>
 									</ul>
 								</div>
