--- a/index.html
+++ b/index.html
@@ -106,20 +106,23 @@
 								<header class="major">
 									<h2>Prestations</h2>
 									<p>Je propose différentes prestations, en télétravail ou sur site, de manière ponctuelle ou régulière :</p>
-								</header>
-								<p>J'utilise vos logiciels si vous avez un ordinateur ou je peux travailler sur mon matériel. Je possède le pack office. J'utilise google drive pour le partage de fichiers. J'utilise express scribe pour la retranscription audio ou un simple dictaphone. Nous pouvons communiquer par téléphone, mail ou WhatsApp.</p>
+								</header>								
 								<div class="aligned-content">
 								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span> <strong>Votre secrétaire à distance : </strong>
 									<ul>
 									<p>Les modalités d’exécution de la mission :</p>
 									<p>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</p>
-									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec un délai pour ce faire. Je réalise ce travail et vous l’adresse pour validation.</p>
-									<p>Je peux travailler sur vos logiciels métiers, vos drives. <strong>La confiance et la confidentialité sont les maîtres mots.</strong></p>									
-									<p>Le télétravail permet de réaliser des économies : pas de bureau dédié, j'utilise mon matériel et vous ne payez que le travail réalisé.</p>
+									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande.</p>
+									<p>Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec l'indication d'une échéance.</p> 
+									<p>Je réalise ce travail et vous l’adresse pour validation.</p>
+									<p>Vous pouvez également me confier vos fichiers audio pour retranscription.</p>
+									<p>Je peux travailler sur vos logiciels métiers, vos drives.</p>
+									<p><strong>La confiance et la confidentialité sont les maîtres mots.</strong></p>									
+									<p>Le télétravail permet de réaliser des économies : pas de bureau dédié, ni de matériel dédié, j'utilise mon matériel et vous ne payez que le travail réalisé.</p>
 									</ul>
 								</div>
 										<p><span class="image right"><img src="images/teletravail.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> 
-											<p>Je travaille dans vos locaux : une table où je peux poser mon ordinateur portable suffit.</p>
+											<p>Je travaille dans vos locaux : il n'est pas nécessaire d'avoir un bureau ou un ordinateur dédié : une table où je peux poser mon ordinateur personnel suffit.</p>
 											<p>Nous pouvons convenir, à votre convenance, de mon intervention certains jours dans la semaine ou pour certaines tâches (préparation d’un dossier de plaidoirie, en début de mois pour aide à la préparation comptable).</p>
 								<footer class="major">
 									<ul class="actions special">
