--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 											<br>
 											<br>J'interviens dans vos bureaux (secteurs Aix-en-Provence, Salon-de-Provence, Cavaillon) ou en télétravail.
 											<br>
-											<br><strong>Fini le stress et les journées interminables, allégez votre travail, contactez moi.</strong></p>
+											<h3><strong>Fini le stress et les journées interminables,</strong></h3>
+											<h3><strong>allégez votre travail,</strong></h3>
+											<h3><strong>contactez moi.</strong></h3>
 										<ul class="actions">
 											<li><a href="azerty.html" class="button primary">En savoir plus</a></li>
 										</ul>
