--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 											<br>J'interviens dans vos bureaux (secteurs Aix-en-Provence, Salon-de-Provence, Cavaillon) ou en télétravail.
 											<br>
 											<h3><strong>Fini le stress et les journées interminables,</strong></h3>
-											<h3><strong>allégez votre travail,</strong></h3>
-											<h3><strong>contactez moi.</strong></h3>
+											<h3><strong>Allégez votre travail,</strong></h3>
+											<h3><strong>Contactez moi.</strong></h3>
 										<ul class="actions">
 											<li><a href="azerty.html" class="button primary">En savoir plus</a></li>
 										</ul>
@@ -114,9 +114,7 @@
 									<ul>
 									<p>Les modalités d’exécution de la mission :</p>
 									<p>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</p>
-									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande.</p>
-									<p>Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec l'indication d'une échéance.</p> 
-									<p>Je réalise ce travail et vous l’adresse pour validation.</p>
+									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec l'indication d'une échéance. Je réalise ce travail et vous l’adresse pour validation.</p>
 									<p>Vous pouvez également me confier vos fichiers audio pour retranscription.</p>
 									<p>Je peux travailler sur vos logiciels métiers, vos drives.</p>
 									<p><strong>La confiance et la confidentialité sont les maîtres mots.</strong></p>									
