--- a/prestations.html
+++ b/prestations.html
@@ -32,7 +32,7 @@
 									<li><a href="index.html" class="button primary">Retour</a></li>
 								</ul>
 								<h2>Professionnels du droit</h2>
-								<p>Secrétariat classique :
+								<p><strong>Secrétariat classique :</strong>
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<ul>
@@ -47,7 +47,7 @@
 										</ul>
 									</div>
 								</div></p>
-								<p>Secrétariat juridique : maîtrise de Kleos, Adapps, Clior
+								<p><strong>Secrétariat juridique : maîtrise de Kleos, Adapps, Clior</strong>
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
@@ -66,7 +66,7 @@
 										</ul>
 									</div>
 								</div></p>
-								<p>Secrétariat expert judiciaire :
+								<p><strong>Secrétariat expert judiciaire :</strong>
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
@@ -77,7 +77,7 @@
 									</div>
 								</div></p>
 								<h2>Entreprises</h2>
-								<p>Secrétariat classique :
+								<p><strong>Secrétariat classique :</strong>
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
