--- a/prestations.html
+++ b/prestations.html
@@ -37,7 +37,8 @@
 									<div class="col-6 col-12-small">
 										<ul>
 											<li>Tenue d'agenda, prise de rendez-vous</li>
-											<li>Traitement de vos mails</li>
+											<li>Traitement des mails</li>
+											<li>Retranscritpion audio</li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-medium">
@@ -51,10 +52,11 @@
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
-											<li>Frappe de vos courriers</li>
+											<li>Rédaction de courriers</li>
 											<li>Communication de pièces</li>
 											<li>RPVA</li>
 											<li>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</li>
+											<li>Facturation (Notes d'honoraires, relances) et taxation d’honoraires</li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-medium">
@@ -71,7 +73,7 @@
 									<div class="col-6 col-12-medium">
 										<ul>
 											<li>Convocation à expertise</li>
-											<li>Rédaction et mise en page de notes aux parties</li>
+											<li>Rédaction, mise en page de notes aux parties et rapports d'expertise</li>
 											<li>Respect du contradictoire</li>
 										</ul>		
 									</div>
@@ -81,7 +83,7 @@
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
-											<li>Tenue d'agenda, prise de rendez-vous, traitement de vos mails</li>
+											<li>Tenue d'agenda, prise de rendez-vous, traitement des mails</li>
 											<li>Rédaction de courriers divers</li>
 											<li>Classement, archivage</li>
 										</ul>
