--- a/prestations.html
+++ b/prestations.html
@@ -88,14 +88,20 @@
 											<li>Classement, archivage</li>
 										</ul>
 									</div>
+								</div></p>
+								<p><strong>Secrétariat classique :</strong>
+								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
 											<li>Saisie de devis, de factures</li>
 											<li>Suivi et relance des impayés</li>
 											<li>Rapprochement bancaire</li>
+											<li>Aide à l'expert-comptable</li>
 										</ul>
 									</div>
 								</div></p>
+								<p><strong>Retranscription et rédaction des PV CSE et SSCT </strong></p>
+								<p><strong>Aide lors de contentieux judiciaires (relation avec l’avocat ou les juridictions, recherches de pièces…) :</strong></p>
 							<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>	
 							</section>
 
