--- a/prestations.html
+++ b/prestations.html
@@ -101,7 +101,7 @@
 									</div>
 								</div></p>
 								<p><strong>Retranscription et rédaction des PV CSE et SSCT </strong></p>
-								<p><strong>Aide lors de contentieux judiciaires (relation avec l’avocat ou les juridictions, recherches de pièces…) :</strong></p>
+								<p><strong>Aide lors de contentieux judiciaires (relation avec l’avocat ou les juridictions, recherches de pièces…)</strong></p>
 							<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>	
 							</section>
 
