--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</header>
 								<ul class="features">
 										<ul>
-											<li><strong>Surcroit de travail</strong></li>
+											<p><strong>Surcroit de travail</strong></p>
 											<li>Remplacement temporaire de votre assistante habituelle</li>
 											<li>Besoin d’une aide régulière ou occasionnelle</li>
 										</ul>
@@ -73,7 +73,7 @@
 									<li>										
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>										
 									</li>									
-								<ul class="features">
+								<ul class="row">
 									<li>
 										<br>
 										<h3>Quels sont les avantages ?</h3>
@@ -93,7 +93,7 @@
 											</div>
 										</div>
 									</li>
-								<ul class="features">
+								<ul class="row">
 									<li>
 										<h3>Pour qui ?</h3>
 										<ul>
