--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 								<ul class="features">
 										<ul>
 											<p><strong>Surcroit de travail</strong></p>
-											<li>Remplacement temporaire de votre assistante habituelle</li>
-											<li>Besoin d’une aide régulière ou occasionnelle</li>
+											<p>Remplacement temporaire de votre assistante habituelle</p>
+											<p>Besoin d’une aide régulière ou occasionnelle</p>
 										</ul>
 								<ul class="features">
-									<li>										
+									<p>										
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>										
-									</li>									
+									</p>									
 								<ul class="row">
-									<li>
+									<p>
 										<br>
 										<h3>Quels sont les avantages ?</h3>
 										<div class="row">
@@ -92,15 +92,15 @@
 												</ul>
 											</div>
 										</div>
-									</li>
+									</p>
 								<ul class="row">
-									<li>
+									<p>
 										<h3>Pour qui ?</h3>
 										<ul>
 											<li>Les professionnels du droit : avocats, notaires, huissiers, experts...</li>
 											<li>Ou tout autre secteur d'activité.</li>
 										</ul>
-									</li>
+									</p>
 								</ul>
 							</section>
 						<!-- Second Section -->
