--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 									<p>										
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>										
 									</p>									
-								<ul class="row">
+								<ul class="features">
 									<p>
 										<br>
 										<h3>Quels sont les avantages ?</h3>
-										<div class="row">
+										<div class="features">
 											<div class="col-6 col-12-medium">
 												<ul>
 													<li>La simplicité : pas de contrainte administrative liée à une embauche</li>
@@ -93,7 +93,7 @@
 											</div>
 										</div>
 									</p>
-								<ul class="row">
+								<ul class="features">
 									<p>
 										<h3>Pour qui ?</h3>
 										<ul>
