--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
 								<ul class="features">
-										<ul>
-											<p><strong>Surcroit de travail</strong></p>
+											<h3><strong>Surcroit de travail</strong></h3>
 											<p>Remplacement temporaire de votre assistante habituelle</p>
 											<p>Besoin d’une aide régulière ou occasionnelle</p>
-										</ul>
 								<ul class="features">
 									<p>										
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>										
