--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
 								<ul class="features">
-												<h3><strong>Surcroit de travail</strong></h3>
+											<p><strong>Surcroit de travail</strong></p>
 											<p>Remplacement temporaire de votre assistante habituelle</p>
 											<p>Besoin d’une aide régulière ou occasionnelle</p>
 								<ul class="features">
