--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
 								<ul class="features">
-											<p><strong>Surcroit de travail</strong></p>
-											<p>Remplacement temporaire de votre assistante habituelle</p>
-											<p>Besoin d’une aide régulière ou occasionnelle</p>
+									<p>
+										<h3><strong>Surcroit de travail</strong></h3>
+										<p>Remplacement temporaire de votre assistante habituelle</p>
+										<p>Besoin d’une aide régulière ou occasionnelle</p>
+									</p>
+								</ul>
 								<ul class="features">
 									<p>										
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>										
