--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
 										<div class="features">
 											<div class="col-6 col-12-medium">
 												<ul>
-													<li>La simplicité : pas de contrainte administrative liée à une embauche</li>
-													<li>Sans engagement de durée : pas de contrat de travail</li>
-													<li>Pas de charges sociales, ni de frais lié à l'établissement d'une fiche de paie</li>
+													<p>La simplicité : pas de contrainte administrative liée à une embauche</p>
+													<p>Sans engagement de durée : pas de contrat de travail</p>
+													<p>Pas de charges sociales, ni de frais lié à l'établissement d'une fiche de paie</p>
 												</ul>
 											</div>
 											<div class="col-6 col-12-medium">
 												<ul>
-													<li>Un service immédiat : disponibilité permettant de répondre rapidement à la demande</li>													
-													<li>Déductibilité des factures</li>
+													<p>Un service immédiat : disponibilité permettant de répondre rapidement à la demande</p>
+													<p>Déductibilité des factures</p>
 												</ul>
 											</div>
 										</div>
@@ -98,8 +98,8 @@
 									<p>
 										<h3>Pour qui ?</h3>
 										<ul>
-											<li>Les professionnels du droit : avocats, notaires, huissiers, experts...</li>
-											<li>Ou tout autre secteur d'activité.</li>
+											<p>Les professionnels du droit : avocats, notaires, huissiers, experts...</p>
+											<p>Ou tout autre secteur d'activité.</p>
 										</ul>
 									</p>
 								</ul>
