--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 								<ul class="features">
 									<p>
 										<h3><strong>Surcroit de travail</strong></h3>
+									<div class="features">
 									<p>Remplacement temporaire de votre assistante habituelle</p>
 									<p>Besoin d’une aide régulière ou occasionnelle</p>
+									</div>
 									</p>
 								</ul>
 								<ul class="features">
