--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 								</header>
 								<ul class="features">
 									<p>
-										<h3><strong>Surcroit de travail</strong></h3>
-									<div class="features">
-									<p>Remplacement temporaire de votre assistante habituelle</p>
-									<p>Besoin d’une aide régulière ou occasionnelle</p>
-									</div>
+									<h3><strong>Surcroit de travail</strong></h3>
+										<div class="features">
+										<p>Remplacement temporaire de votre assistante habituelle</p>
+										<p>Besoin d’une aide régulière ou occasionnelle</p>
+										</div>
 									</p>
 								</ul>
 								<ul class="features">
@@ -79,8 +79,8 @@
 								<ul class="features">
 									<p>
 										<br>
-										<h3>Quels sont les avantages ?</h3>
-										<div class="features">
+										<h3><strong>Quels sont les avantages ?</strong></h3>
+										<div class="row">
 											<div class="col-6 col-12-medium">
 												<ul>
 													<p>La simplicité : pas de contrainte administrative liée à une embauche</p>
@@ -96,6 +96,7 @@
 											</div>
 										</div>
 									</p>
+								</ul>
 								<ul class="features">
 									<p>
 										<h3>Pour qui ?</h3>
