--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
 									<p>
 									<h3><strong>Surcroit de travail</strong></h3>
 										<div class="features">
-										<p>Remplacement temporaire de votre assistante habituelle</p>
-										<p>Besoin d’une aide régulière ou occasionnelle</p>
+											<div class="col-6 col-12-medium">
+											<p>Remplacement temporaire de votre assistante habituelle</p>
+											<p>Besoin d’une aide régulière ou occasionnelle</p>
+											</div>
 										</div>
 									</p>
 								</ul>
