--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
 									<h3><strong>Surcroit de travail</strong></h3>
 										<div class="features">
 											<div class="col-6 col-12-medium">
-											<p>Remplacement temporaire de votre assistante habituelle</p>
-											<p>Besoin d’une aide régulière ou occasionnelle</p>
+												<ul>
+													<p>Remplacement temporaire de votre assistante habituelle</p>
+													<p>Besoin d’une aide régulière ou occasionnelle</p>
+												</ul>
 											</div>
 										</div>
 									</p>
@@ -101,11 +103,13 @@
 								</ul>
 								<ul class="features">
 									<p>
-										<h3>Pour qui ?</h3>
-										<ul>
-											<p>Les professionnels du droit : avocats, notaires, huissiers, experts...</p>
-											<p>Ou tout autre secteur d'activité.</p>
-										</ul>
+										<h3><strong>Pour qui ?</strong></h3>
+										<div class="row">
+											<div class="col-6 col-12-medium">
+												<ul>
+													<p>Les professionnels du droit : avocats, notaires, huissiers, experts...</p>
+													<p>Ou tout autre secteur d'activité.</p>
+												</ul>
 									</p>
 								</ul>
 							</section>
