--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
 								<ul class="features">
 									<p>
 										<h3><strong>Pour qui ?</strong></h3>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<ul>
-													<p>Les professionnels du droit : avocats, notaires, huissiers, experts...</p>
-													<p>Ou tout autre secteur d'activité.</p>
-												</ul>
+											<div class="row">
+												<div class="col-6 col-12-medium">
+													<ul>
+														<p>Les professionnels du droit : avocats, notaires, huissiers, experts...</p>
+														<p>Ou tout autre secteur d'activité.</p>
+													</ul>
+												</div>
+											</div>
 									</p>
 								</ul>
 							</section>
