--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 								<ul class="features">
 									<p>										
 										<span class="image"><img src="images/slogan.jpg" alt="" /></span>										
-									</p>									
+									</p>
+								</ul>
 								<ul class="features">
 									<p>
-										<br>
-										<h3><strong>Quels sont les avantages ?</strong></h3>
+									<br>
+									<h3><strong>Quels sont les avantages ?</strong></h3>
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<ul>
@@ -105,7 +106,7 @@
 									<p>
 										<br>
 										<h3><strong>Pour qui ?</strong></h3>
-										<div class="row">
+										<div class="features">
 											<div class="col-6 col-12-medium">
 												<ul>
 													<p>Les professionnels du droit : avocats, notaires, huissiers, experts...</p>
