--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 									<h2>Pourquoi une assistante indépendante ?</h2>
 								</header>
 								<ul class="features">
-									<p>
-									<h3><strong>Surcroit de travail</strong></h3>
-										<div class="features">
-											<div class="col-6 col-12-medium">
-												<ul>
-													<p>Remplacement temporaire de votre assistante habituelle</p>
-													<p>Besoin d’une aide régulière ou occasionnelle</p>
-												</ul>
-											</div>
+									<p>									
+									<div class="features">
+										<div class="col-6 col-12-medium">
+											<ul>
+												<p>Surcroit de travail</p>
+												<p>Remplacement temporaire de votre assistante habituelle</p>
+												<p>Besoin d’une aide régulière ou occasionnelle</p>
+											</ul>
 										</div>
+									</div>
 									</p>
 								</ul>
 								<ul class="features">
@@ -126,6 +126,7 @@
 								<div class="aligned-content">
 								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span> <strong>Votre secrétaire à distance : </strong>
 									<ul>
+									<br>
 									<p>Les modalités d’exécution de la mission :</p>
 									<p>Selon vos besoins, nous pouvons convenir de bloquer un créneau horaire durant lequel je reste disponible pour vous, ce qui permet une meilleure réactivité selon les tâches à accomplir.</p>
 									<p>Ou si vous préférez, je ne travaille pour vous qu’à la demande. Vous m’informez par mail, sms, WhatsApp d’une tâche à accomplir avec l'indication d'une échéance. Je réalise ce travail et vous l’adresse pour validation.</p>
