--- a/azerty.html
+++ b/azerty.html
@@ -38,7 +38,7 @@
 									<br>J'ai approfondi mes connaissances juridiques en tant qu’<strong>informatrice juriste</strong> au Centre d'Information des Droits et des Familles.
 									<br>J'ai également travaillé comme <strong>secrétaire commerciale</strong> et comme <strong>secrétaire comptable</strong>.
 									<br>J’ai pu effectuer le <strong>suivi juridique</strong> des dossiers d'une entreprise. 
-									<br>>Durant ces 10 années d'expérience, j’ai prouvé ma <strong>capacité d’adaptation</strong> à divers secteurs d’activité et développé mon <strong>savoir-faire</strong>.
+									<br>Durant ces 10 années d'expérience, j’ai prouvé ma <strong>capacité d’adaptation</strong> à divers secteurs d’activité et développé mon <strong>savoir-faire</strong>.
 									<br><br>La boit'AZERTY est née en 2014 de la volonté de proposer mes services non pas à une seule société mais à plusieurs.
 									<br>Le besoin est réel pour les sociétés qui débutent, dont le volume de travail ne justifie pas l'emploi d'un salarié à temps plein ou dont les ressources ne permettent pas de financer un salaire.</p>
 								<span class="image main"><img src="images/teletravail.jpg" alt="" /></span>	
