--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<p>Je propose différentes prestations, en télétravail ou sur site, de manière ponctuelle ou régulière :</p>
 								</header>								
 								<div class="aligned-content">
-								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span> <strong>Votre secrétaire à distance : </strong>
+								<span class="image left"><img src="images/stock-photo-desk-with-keyboard-stationery-and-sweets-top-view.jpg" alt="" /></span> <strong>Votre secrétaire à distance</strong>
 									<ul>
 									<br>
 									<p>Les modalités d’exécution de la mission :</p>
@@ -134,9 +134,11 @@
 									<p>Je peux travailler sur vos logiciels métiers, vos drives.</p>
 									<p><strong>La confiance et la confidentialité sont les maîtres mots.</strong></p>									
 									<p>Le télétravail permet de réaliser des économies : pas de bureau dédié, ni de matériel dédié, j'utilise mon matériel et vous ne payez que le travail réalisé.</p>
+									<br>
+									<br>
 									</ul>
 								</div>
-										<p><span class="image right"><img src="images/teletravail.jpg" alt="" /></span><strong>Votre secrétaire sur site :</strong> 
+										<p><span class="image right"><img src="images/teletravail.jpg" alt="" /></span><strong>Votre secrétaire sur site</strong> 
 											<p>Je travaille dans vos locaux : il n'est pas nécessaire d'avoir un bureau ou un ordinateur dédié : une table où je peux poser mon ordinateur personnel suffit.</p>
 											<p>Nous pouvons convenir, à votre convenance, de mon intervention certains jours dans la semaine ou pour certaines tâches (préparation d’un dossier de plaidoirie, en début de mois pour aide à la préparation comptable).</p>
 								<footer class="major">
