--- a/prestations.html
+++ b/prestations.html
@@ -38,7 +38,7 @@
 										<ul>
 											<li>Tenue d'agenda, prise de rendez-vous</li>
 											<li>Traitement des mails</li>
-											<li>Retranscritpion audio</li>
+											<li>Retranscription audio</li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-medium">
@@ -56,7 +56,7 @@
 											<li>Communication de pièces</li>
 											<li>RPVA</li>
 											<li>Formalités d'approbation des comptes : convocation, rédaction du procès-verbal d'assemblée générale, du rapport de gestion, envoi au greffe...</li>
-											<li>Facturation (Notes d'honoraires, relances) et taxation d’honoraires</li>
+											<li>Facturation (notes d'honoraires, relances) et taxation d’honoraires</li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-medium">
@@ -89,7 +89,7 @@
 										</ul>
 									</div>
 								</div></p>
-								<p><strong>Secrétariat classique :</strong>
+								<p><strong>Secrétariat comptable :</strong>
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul>
